--- a/ShopeeClone/package.json
+++ b/ShopeeClone/package.json
@@ -13,8 +13,14 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.2",
+    "@tailwindcss/vite": "^4.0.9",
+    "@tanstack/react-query": "^4.36.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.2.0",
+    "tailwindcss": "^4.0.9",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
