--- a/ShopeeClone/package.json
+++ b/ShopeeClone/package.json
@@ -16,6 +16,8 @@
     "@hookform/resolvers": "^4.1.2",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
+    "axios": "^1.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.2.0",
