--- a/ShopeeClone/package.json
+++ b/ShopeeClone/package.json
@@ -17,7 +17,9 @@
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "@types/lodash": "^4.17.16",
     "axios": "^1.8.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.2.0",
