--- a/ShopeeClone/package.json
+++ b/ShopeeClone/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.9",
     "yup": "^1.6.1"
   },
