--- a/ShopeeClone/package.json
+++ b/ShopeeClone/package.json
@@ -13,12 +13,14 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.5",
     "@hookform/resolvers": "^4.1.2",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "@types/lodash": "^4.17.16",
     "axios": "^1.8.1",
+    "framer-motion": "^12.4.10",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
