--- a/ShopeeClone/package.json
+++ b/ShopeeClone/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query-devtools": "^4.36.1",
     "@types/lodash": "^4.17.16",
     "axios": "^1.8.1",
+    "classnames": "^2.5.1",
     "framer-motion": "^12.4.10",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
