--- a/ShopeeClone/package.json
+++ b/ShopeeClone/package.json
@@ -23,6 +23,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "^12.4.10",
     "lodash": "^4.17.21",
+    "motion": "^12.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.2.0",
