--- a/ShopeeClone/package.json
+++ b/ShopeeClone/package.json
@@ -21,6 +21,7 @@
     "@types/lodash": "^4.17.16",
     "axios": "^1.8.1",
     "classnames": "^2.5.1",
+    "dompurify": "^3.2.4",
     "framer-motion": "^12.4.10",
     "lodash": "^4.17.21",
     "motion": "^12.5.0",
@@ -29,10 +30,12 @@
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.9",
+    "tailwindcss-animated": "^2.0.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/dompurify": "^3.2.0",
     "@types/node": "^22.13.8",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
